@@ -1,6 +1,6 @@
 /* StarPU --- Runtime system for heterogeneous multicore architectures.
  *
- * Copyright (C) 2010-2015,2017                           CNRS
+ * Copyright (C) 2010-2015,2017,2018                      CNRS
  * Copyright (C) 2011-2013                                Inria
  * Copyright (C) 2009-2011,2014-2015,2017-2018            Université de Bordeaux
  *
@@ -190,6 +190,12 @@ in readonly mode through starpu_data_partition_readonly_submit(), and will upgra
 that partitioning into read-write mode for the \p children, by invalidating \p
 initial_handle, and adding the necessary dependencies.
 
+\fn void starpu_data_partition_submit_sequential_consistency(starpu_data_handle_t initial_handle, unsigned nparts, starpu_data_handle_t *children, int sequential_consistency)
+\ingroup API_Data_Partition
+Similar to starpu_data_partition_submit() but also allows to
+specify the coherency to be used for the main data \p initial_handle
+through the parameter \p sequential_consistency.
+
 \fn void starpu_data_unpartition_submit(starpu_data_handle_t initial_handle, unsigned nparts, starpu_data_handle_t *children, int gathering_node)
 \ingroup API_Data_Partition
 This assumes that \p initial_handle is partitioned into \p children, and submits
@@ -214,6 +220,12 @@ state as obtained with starpu_data_partition_readonly_submit().
 
 \p gathering_node can be set to -1 to let the runtime decide which memory node
 should be used to gather the pieces.
+
+\fn void starpu_data_unpartition_submit_sequential_consistency(starpu_data_handle_t initial_handle, unsigned nparts, starpu_data_handle_t *children, int gathering_node, int sequential_consistency)
+\ingroup API_Data_Partition
+Similar to starpu_data_unpartition_submit() but also allows to
+specify the coherency to be used for the main data \p initial_handle
+through the parameter \p sequential_consistency.
 
 \fn void starpu_data_partition_clean(starpu_data_handle_t root_data, unsigned nparts, starpu_data_handle_t *children)
 \ingroup API_Data_Partition
